# charm-gems

./: .gitignore  CMakeLists.txt  README.md  build_itk.py  setup.py
.github/workflows/: linux.yml  linux_build.sh  macos.yml  macos_build.sh  windows.yml  windows_build.bat
gems/: CMakeLists.txt  kvlMutualInformationCostAndGradientCalculator.cxx  kvlRegisterImages.cxx  kvlRegisterImages.h  kvlRegisterImages.hxx
gems_python/: CMakeLists.txt  pyKvlAffineRegistration.cxx  pyKvlAffineRegistration.h  pyKvlImage.cxx  pyKvlRigidRegistration.h  python.cxx
